tests/golden/type_errors/function_assignment_updates_return_type.cd
let f = fun () {
  return 1;
};
f = fun () {
  return "x";
};
let s = f();
s = 2;
