tests/golden/type_errors/function_assignment_updates_return_type.err
Type error at 5:3: cannot return string from function returning number
    return "x";
    ^
